# homeconnect_ws_sim

./: .gitignore  MANIFEST.in  Readme.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml
src/homeconnect_ws_sim/: __main__.py  appliance.py  const.py  entities.py  hc_socket.py  server.py  session.py
src/homeconnect_ws_sim/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/homeconnect_ws_sim/frontend/src/: App.vue  const.ts  main.ts  store.ts  types.ts  ws.ts
src/homeconnect_ws_sim/frontend/src/components/: Entity.vue  ItemAccess.vue  ItemEnum.vue  ItemInt.vue  ItemIntValue.vue  ItemSwitch.vue  ItemText.vue  ItemTextValue.vue
