[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "homeconnect_ws_sim"
authors = [{ name = "chris-mc1" }]
description = "Homeconnect Websocket Simulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["aiohttp>=3.11.13", "homeconnect_websocket==1.5.0"]

[project.urls]
Homepage = "https://github.com/chris-mc1/homeconnect_ws_sim"
Issues = "https://github.com/chris-mc1/homeconnect_ws_sim/issues"

[dependency-groups]
dev = ["colorlog", "ruff>=0.9"]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-aiohttp>=1.0.5",
    "coverage>=7.6.0",
    "pytest-cov>=5.0.0",
]

[tool.coverage.run]
branch = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
